--- a/package.json
+++ b/package.json
@@ -1,1 +1,13 @@
+{
+  "name": "my-proxy",
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "@titaniumnetwork-dev/ultraviolet": "^3.2.0"
+  }
+}
 
